<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="320dp"
        android:layout_height="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="512dp"
        android:layout_height="32dp"
        android:layout_marginStart="-230dp"
        android:rotation="90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:checkable="false"
        android:contentDescription="@string/D1_description"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="50dp"
        app:icon="@drawable/baseline_settings_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:itemIconTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_blank"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:checkable="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:visibility="invisible"
        app:cornerRadius="50dp"
        app:icon="@drawable/baseline_settings_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:itemIconTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toStartOf="@+id/button_stop"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_rgb_stripe"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:checkable="false"
        android:contentDescription="@string/L2_description"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="50dp"
        app:icon="@drawable/baseline_settings_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:itemIconTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_stop" />

    <Button
        android:id="@+id/button_driving_lights"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:checkable="false"
        android:contentDescription="@string/L1_description"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="50dp"
        app:icon="@drawable/baseline_settings_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:itemIconTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toStartOf="@+id/button_rgb_stripe"
        app:layout_constraintTop_toBottomOf="@+id/button_blank" />

    <Button
        android:id="@+id/button_right_blinker"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:checkable="false"
        android:contentDescription="@string/L3_description"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="50dp"
        app:icon="@drawable/baseline_settings_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:itemIconTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_rgb_stripe" />

    <Button
        android:id="@+id/button_left_blinker"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:checkable="false"
        android:contentDescription="@string/L4_description"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="50dp"
        app:icon="@drawable/baseline_settings_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:itemIconTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toStartOf="@+id/button_right_blinker"
        app:layout_constraintTop_toBottomOf="@+id/button_driving_lights" />

    <Button
        android:id="@+id/button_right_parking"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:checkable="false"
        android:contentDescription="@string/P1_description"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="50dp"
        app:icon="@drawable/baseline_settings_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:itemIconTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_right_blinker" />

    <Button
        android:id="@+id/button_left_parking"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:checkable="false"
        android:contentDescription="@string/P3_description"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="50dp"
        app:icon="@drawable/baseline_settings_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:itemIconTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toStartOf="@+id/button_right_parking"
        app:layout_constraintTop_toBottomOf="@+id/button_left_blinker" />

</androidx.constraintlayout.widget.ConstraintLayout>